B-39281 fixing alignment and image size issues for background images in IE and Firefox.

--- a/public/styles/projects/100-percent/spring-2016.scss
+++ b/public/styles/projects/100-percent/spring-2016.scss
@@ -33,6 +33,11 @@ body {
     text-align: center;
 }
 
+.background {
+    width: 100vw;
+    height: auto;
+}
+
 #landingStore {
     display: inline-block;
     text-align: left;
